[gd_scene load_steps=14 format=3 uid="uid://bfpy6qwd4ki8c"]

[ext_resource type="Script" uid="uid://b60cmcucmlmqm" path="res://Scripts/Main.gd" id="1_7mycd"]
[ext_resource type="PackedScene" uid="uid://c2u0lxx6qu6c1" path="res://Scenes/Fundo.tscn" id="2_efxa6"]
[ext_resource type="Script" uid="uid://0q0tbiapypgg" path="res://Scripts/CardManager.gd" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://bsv2ox1kwotyi" path="res://Scenes/EnemyCardSlot.tscn" id="3_efxa6"]
[ext_resource type="PackedScene" uid="uid://dn17xu8mt3iu1" path="res://Scenes/CardSlot.tscn" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://dywl10glq7ymj" path="res://Scripts/UI.gd" id="4_lquwl"]
[ext_resource type="Script" uid="uid://djme8ltff1kcp" path="res://Scripts/PlayerHand.gd" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://bjawn0eg4gf6p" path="res://Scenes/Deck.tscn" id="5_lquwl"]
[ext_resource type="Script" uid="uid://cpvfocks5cygh" path="res://Scripts/Deck.gd" id="6_kek77"]
[ext_resource type="Script" uid="uid://binbtdjkhpa16" path="res://Scripts/InputManager.gd" id="7_4c57u"]
[ext_resource type="Script" uid="uid://c5vglsm5cmiga" path="res://Scripts/EnemyDeck.gd" id="10_vivmo"]
[ext_resource type="Texture2D" uid="uid://nhmp1010qyy7" path="res://Assets/Images/Card Deck/Deck Sombras.png" id="11_dg77c"]
[ext_resource type="Script" uid="uid://c35nw3nyapacm" path="res://Scripts/EnemyHand.gd" id="12_2cqfq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7mycd")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("7_4c57u")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("2_h2yge")

[node name="BattleManager" type="Node" parent="."]

[node name="BattleTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CardSlots" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="CardSlot" parent="CardSlots" instance=ExtResource("4_1bvp3")]
position = Vector2(970, 660)
scale = Vector2(0.85, 0.85)

[node name="EnemyCardSlot" parent="CardSlots" instance=ExtResource("3_efxa6")]
position = Vector2(970, 460)
scale = Vector2(0.85, 0.85)
script = null

[node name="EnemyHand" type="Node2D" parent="."]
visible = false
script = ExtResource("12_2cqfq")

[node name="EnemyDeck" type="Node2D" parent="."]
scale = Vector2(0.9, 0.9)
script = ExtResource("10_vivmo")

[node name="Sprite2D" type="Sprite2D" parent="EnemyDeck"]
z_index = -2
position = Vector2(736.667, 466.667)
scale = Vector2(0.132, 0.13)
texture = ExtResource("11_dg77c")

[node name="DeckCounter" type="RichTextLabel" parent="EnemyDeck"]
visible = false
modulate = Color(0.280555, 0.246657, 0.141675, 1)
z_index = -2
offset_left = 231.25
offset_top = 273.75
offset_right = 271.25
offset_bottom = 313.75
scale = Vector2(3, 3)
text = "0"
metadata/_edit_use_anchors_ = true

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("5_7mycd")

[node name="Deck" parent="." instance=ExtResource("5_lquwl")]
position = Vector2(663, 626)
scale = Vector2(0.9, 0.9)
script = ExtResource("6_kek77")

[node name="CardPreview" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="CardImage" type="Sprite2D" parent="CardPreview"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_lquwl")

[node name="ExitButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1820.0
offset_top = 55.0
offset_right = 1866.0
offset_bottom = 101.0
text = "X"

[node name="Background" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_top = 4.0
offset_right = 39.0
offset_bottom = 45.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="UI/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 358.0
offset_top = 149.0
offset_right = 1471.0
offset_bottom = 753.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ImageGameConfig" type="Sprite2D" parent="UI/Background"]
position = Vector2(-733, 308)
scale = Vector2(0.723125, 0.708889)
metadata/_edit_lock_ = true

[node name="Fundo" parent="UI/Background" instance=ExtResource("2_efxa6")]
z_index = -6
position = Vector2(965, 534)

[node name="Camera2D" type="Camera2D" parent="UI/Background/Fundo"]

[node name="BalanceBarContainer" type="Control" parent="UI"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 280.0
offset_bottom = 40.0
grow_horizontal = 2
metadata/_edit_lock_ = true

[node name="BreakerBar" type="TextureProgressBar" parent="UI/BalanceBarContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 50.0

[node name="HarmonyBar" type="TextureProgressBar" parent="UI/BalanceBarContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 50.0
fill_mode = 1

[node name="EndTurnButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 1101.0
offset_top = 482.0
offset_right = 1311.0
offset_bottom = 538.0
scale = Vector2(1.3, 1.3)
text = "Finalizar turno"

[connection signal="pressed" from="UI/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UI/EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
